--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ canvas{
 .playlist{
     width:90%;
     margin:10px auto;
-    max-height:250px;
+    max-height:300px;
     overflow-y:auto;
     border-top:1px solid #333;
 }
@@ -86,7 +86,7 @@ canvas{
 
 <body>
 
-<div class="topbar">🎵 BHENZFLIX MUSIC LIBRARY</div>
+<div class="topbar">🎵 BHENZFLIX MUSIC</div>
 
 <div class="album">
     <img id="cover" src="https://picsum.photos/400/400?random=1">
@@ -114,6 +114,7 @@ const repoBase = "https://raw.githubusercontent.com/carranzabhenz35-blip/BhenzFl
 
 const songs = [
 
+/* A7X */
 "04 - Avenged Sevenfold - Buried Alive.mp3",
 "10 - Avenged Sevenfold - Unholy Confessions.mp3",
 "13 - Avenged Sevenfold - Seize the Day.mp3",
@@ -122,6 +123,7 @@ const songs = [
 "35 - Avenged Sevenfold - 4_00 AM.mp3",
 "37 - Avenged Sevenfold - Crossroads.mp3",
 
+/* LINKIN PARK */
 "07 - Linkin Park - What I've Done.mp3",
 "13 - Linkin Park - Bleed It Out.mp3",
 "15 - Linkin Park - Given Up.mp3",
@@ -130,8 +132,20 @@ const songs = [
 "33 - Linkin Park - Valentine's Day.mp3",
 "36 - Linkin Park - Hands Held High.mp3",
 
+/* JAY-Z */
 "17 - JAY-Z - Numb _ Encore.mp3",
-"35 - JAY-Z - Dirt Off Your Shoulder.mp3"
+"35 - JAY-Z - Dirt Off Your Shoulder.mp3",
+
+/* RHCP */
+"03 - Red Hot Chili Peppers - Californication.mp3",
+"05 - Red Hot Chili Peppers - Scar Tissue.mp3",
+"06 - Red Hot Chili Peppers - Snow (Hey Oh).mp3",
+"07 - Red Hot Chili Peppers - Otherside.mp3",
+"08 - Red Hot Chili Peppers - By the Way.mp3",
+"09 - Red Hot Chili Peppers - Dani California.mp3",
+"11 - Red Hot Chili Peppers - Dark Necessities.mp3",
+"14 - Red Hot Chili Peppers - The Zephyr Song.mp3",
+"35 - Red Hot Chili Peppers - Under The Bridge.mp3"
 
 ];
 
