--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 body{
     margin:0;
     font-family:Arial, sans-serif;
-    background:linear-gradient(black,#200000);
+    background:radial-gradient(circle at center, #2a0000, black);
     color:white;
     text-align:center;
+    overflow-x:hidden;
 }
 
 .topbar{
-    background:#111;
     padding:15px;
-    font-size:20px;
+    font-size:22px;
     letter-spacing:4px;
     color:red;
-    box-shadow:0 0 20px red;
+    text-shadow:0 0 15px red;
 }
 
 .album{
-    width:230px;
-    height:230px;
+    width:240px;
+    height:240px;
     border-radius:50%;
     margin:20px auto;
     box-shadow:0 0 40px red;
@@ -37,12 +37,24 @@ body{
     object-fit:cover;
 }
 
+#title{
+    margin:15px;
+    font-size:16px;
+}
+
 .controls button{
-    background:none;
+    background:rgba(255,255,255,0.05);
     border:none;
     color:white;
-    font-size:24px;
+    font-size:22px;
     margin:10px;
+    padding:10px 15px;
+    border-radius:10px;
+    box-shadow:0 0 10px red;
+}
+
+.controls button:hover{
+    background:red;
 }
 
 canvas{
@@ -51,12 +63,14 @@ canvas{
 }
 
 .search-box{
-    width:90%;
-    padding:8px;
+    width:85%;
+    padding:10px;
     margin:10px auto;
     display:block;
     border:none;
-    border-radius:5px;
+    border-radius:15px;
+    background:rgba(255,255,255,0.1);
+    color:white;
 }
 
 .playlist{
@@ -64,14 +78,12 @@ canvas{
     margin:10px auto;
     max-height:300px;
     overflow-y:auto;
-    border-top:1px solid #333;
 }
 
 .song{
     padding:8px;
     border-bottom:1px solid #222;
     cursor:pointer;
-    font-size:13px;
 }
 
 .song:hover{
@@ -112,43 +124,30 @@ canvas{
 
 <script>
 
-const repoBase = "https://raw.githubusercontent.com/carranzabhenz35-blip/BhenzFlix/main/";
+const repoBase="https://raw.githubusercontent.com/carranzabhenz35-blip/BhenzFlix/main/";
 
-const songs = [
-
+const songs=[
 "04 - Avenged Sevenfold - Buried Alive.mp3",
 "10 - Avenged Sevenfold - Unholy Confessions.mp3",
-"13 - Avenged Sevenfold - Seize the Day.mp3",
-"14 - Avenged Sevenfold - Nobody.mp3",
-"18 - Avenged Sevenfold - Blinded in Chains.mp3",
-"35 - Avenged Sevenfold - 4_00 AM.mp3",
-"37 - Avenged Sevenfold - Crossroads.mp3",
-
-"07 - Linkin Park - What I've Done.mp3",
-"13 - Linkin Park - Bleed It Out.mp3",
-"15 - Linkin Park - Given Up.mp3",
-
 "03 - Red Hot Chili Peppers - Californication.mp3",
 "05 - Red Hot Chili Peppers - Scar Tissue.mp3",
 "06 - Red Hot Chili Peppers - Snow (Hey Oh).mp3"
-
 ];
 
-let filteredSongs = [...songs];
-let current = 0;
-let shuffle = false;
-let repeatMode = 0; // 0 off, 1 repeat all, 2 repeat one
+let filteredSongs=[...songs];
+let current=0;
+let shuffle=false;
+let repeatMode=0;
 
-const audio = document.getElementById("audio");
-const title = document.getElementById("title");
-const playlistDiv = document.getElementById("playlist");
-const cover = document.getElementById("cover");
-const searchInput = document.getElementById("search");
+const audio=document.getElementById("audio");
+const title=document.getElementById("title");
+const playlistDiv=document.getElementById("playlist");
+const cover=document.getElementById("cover");
 
-function loadSong(index){
-    audio.src = encodeURI(repoBase + filteredSongs[index]);
-    title.innerText = filteredSongs[index];
-    cover.src = "https://picsum.photos/400/400?random=" + Math.random();
+function loadSong(i){
+    audio.src=encodeURI(repoBase+filteredSongs[i]);
+    title.innerText=filteredSongs[i];
+    cover.src="https://picsum.photos/400/400?random="+Math.random();
     highlight();
 }
 
@@ -160,10 +159,10 @@ function playPause(){
 
 function nextSong(){
     if(shuffle){
-        current = Math.floor(Math.random()*filteredSongs.length);
+        current=Math.floor(Math.random()*filteredSongs.length);
     } else {
         current++;
-        if(current >= filteredSongs.length){
+        if(current>=filteredSongs.length){
             if(repeatMode==1) current=0;
             else return;
         }
@@ -179,52 +178,34 @@ function prevSong(){
     audio.play();
 }
 
-function toggleShuffle(){
-    shuffle=!shuffle;
-    alert("Shuffle: "+(shuffle?"ON":"OFF"));
-}
-
-function toggleRepeat(){
-    repeatMode++;
-    if(repeatMode>2) repeatMode=0;
-    const modes=["Repeat OFF","Repeat ALL","Repeat ONE"];
-    alert(modes[repeatMode]);
-}
+function toggleShuffle(){ shuffle=!shuffle; }
+function toggleRepeat(){ repeatMode=(repeatMode+1)%3; }
 
 audio.addEventListener("ended",()=>{
-    if(repeatMode==2){
-        audio.play();
-    } else {
-        nextSong();
-    }
+    if(repeatMode==2) audio.play();
+    else nextSong();
 });
 
 function highlight(){
-    const items=document.querySelectorAll(".song");
-    items.forEach((el,i)=>{
-        el.classList.remove("active");
-        if(i===current) el.classList.add("active");
+    document.querySelectorAll(".song").forEach((el,i)=>{
+        el.classList.toggle("active",i===current);
     });
 }
 
 function buildPlaylist(){
     playlistDiv.innerHTML="";
-    filteredSongs.forEach((song,index)=>{
+    filteredSongs.forEach((song,i)=>{
         const div=document.createElement("div");
-        div.classList.add("song");
+        div.className="song";
         div.innerText=song;
-        div.onclick=()=>{
-            current=index;
-            loadSong(current);
-            audio.play();
-        };
+        div.onclick=()=>{current=i;loadSong(i);audio.play();};
         playlistDiv.appendChild(div);
     });
 }
 
-searchInput.addEventListener("input",()=>{
-    const searchTerm=searchInput.value.toLowerCase();
-    filteredSongs=songs.filter(song=>song.toLowerCase().includes(searchTerm));
+document.getElementById("search").addEventListener("input",e=>{
+    const val=e.target.value.toLowerCase();
+    filteredSongs=songs.filter(s=>s.toLowerCase().includes(val));
     current=0;
     buildPlaylist();
     if(filteredSongs.length>0) loadSong(0);
@@ -252,19 +233,19 @@ const dataArray=new Uint8Array(bufferLength);
 function animate(){
     requestAnimationFrame(animate);
     analyser.getByteFrequencyData(dataArray);
-    ctx.fillStyle="black";
-    ctx.fillRect(0,0,canvas.width,canvas.height);
+    ctx.clearRect(0,0,canvas.width,canvas.height);
 
     const barWidth=(canvas.width/bufferLength)*2;
     let x=0;
 
     for(let i=0;i<bufferLength;i++){
-        const barHeight=dataArray[i];
-        const r=barHeight+50;
-        const g=50;
-        const b=150;
-        ctx.fillStyle="rgb("+r+","+g+","+b+")";
-        ctx.fillRect(x,canvas.height-barHeight,barWidth-2,barHeight);
+        const h=dataArray[i];
+        const gradient=ctx.createLinearGradient(0,0,0,canvas.height);
+        gradient.addColorStop(0,"#ff0000");
+        gradient.addColorStop(0.5,"#aa00ff");
+        gradient.addColorStop(1,"#00ffff");
+        ctx.fillStyle=gradient;
+        ctx.fillRect(x,canvas.height-h,barWidth-2,h);
         x+=barWidth;
     }
 }
