--- a/index.html
+++ b/index.html
@@ -22,13 +22,23 @@ body{
     text-shadow:0 0 15px red;
 }
 
-.album{
-    width:240px;
-    height:240px;
-    border-radius:50%;
+/* ===== ALBUM + ROTATING TEXT ===== */
+.album-wrapper{
+    position:relative;
+    width:260px;
+    height:260px;
     margin:20px auto;
-    box-shadow:0 0 40px red;
+}
+
+.album{
+    width:220px;
+    height:220px;
+    border-radius:50%;
     overflow:hidden;
+    position:absolute;
+    top:20px;
+    left:20px;
+    box-shadow:0 0 40px red;
 }
 
 #cover{
@@ -37,18 +47,31 @@ body{
     object-fit:cover;
 }
 
+.circle-text{
+    position:absolute;
+    width:260px;
+    height:260px;
+    animation:spin 15s linear infinite;
+    text-transform:uppercase;
+}
+
+@keyframes spin{
+    from{transform:rotate(0deg);}
+    to{transform:rotate(360deg);}
+}
+
 #title{
     margin:15px;
-    font-size:16px;
+    font-size:15px;
 }
 
 .controls button{
-    background:rgba(255,255,255,0.05);
+    background:rgba(255,0,0,0.1);
     border:none;
     color:white;
     font-size:22px;
-    margin:10px;
-    padding:10px 15px;
+    margin:8px;
+    padding:10px 14px;
     border-radius:10px;
     box-shadow:0 0 10px red;
 }
@@ -100,8 +123,25 @@ canvas{
 
 <div class="topbar">🎵 BHENZFLIX MUSIC</div>
 
-<div class="album">
-    <img id="cover" src="https://picsum.photos/400/400?random=1">
+<div class="album-wrapper">
+    <svg viewBox="0 0 300 300" class="circle-text">
+        <defs>
+            <path id="circlePath"
+                d="M150,150
+                   m-110,0
+                   a110,110 0 1,1 220,0
+                   a110,110 0 1,1 -220,0"/>
+        </defs>
+        <text fill="red" font-size="18" letter-spacing="4">
+            <textPath href="#circlePath">
+                POWERED BY BHENZFLIX • POWERED BY BHENZFLIX •
+            </textPath>
+        </text>
+    </svg>
+
+    <div class="album">
+        <img id="cover" src="https://picsum.photos/400/400?random=1">
+    </div>
 </div>
 
 <div id="title">Loading...</div>
@@ -110,8 +150,6 @@ canvas{
     <button onclick="prevSong()">⏮</button>
     <button onclick="playPause()">▶</button>
     <button onclick="nextSong()">⏭</button>
-    <button onclick="toggleShuffle()">🔀</button>
-    <button onclick="toggleRepeat()">🔁</button>
 </div>
 
 <canvas id="visualizer"></canvas>
@@ -136,8 +174,6 @@ const songs=[
 
 let filteredSongs=[...songs];
 let current=0;
-let shuffle=false;
-let repeatMode=0;
 
 const audio=document.getElementById("audio");
 const title=document.getElementById("title");
@@ -158,15 +194,8 @@ function playPause(){
 }
 
 function nextSong(){
-    if(shuffle){
-        current=Math.floor(Math.random()*filteredSongs.length);
-    } else {
-        current++;
-        if(current>=filteredSongs.length){
-            if(repeatMode==1) current=0;
-            else return;
-        }
-    }
+    current++;
+    if(current>=filteredSongs.length) current=0;
     loadSong(current);
     audio.play();
 }
@@ -178,13 +207,7 @@ function prevSong(){
     audio.play();
 }
 
-function toggleShuffle(){ shuffle=!shuffle; }
-function toggleRepeat(){ repeatMode=(repeatMode+1)%3; }
-
-audio.addEventListener("ended",()=>{
-    if(repeatMode==2) audio.play();
-    else nextSong();
-});
+audio.addEventListener("ended",nextSong);
 
 function highlight(){
     document.querySelectorAll(".song").forEach((el,i)=>{
